Clean up noteboooks.

--- a/examples/HMM.ipynb
+++ b/examples/HMM.ipynb
@@ -222,6 +222,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(hmm_full) \n",
+    "print(hmm_shared_full)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
