--- a/examples/Nested Mixture Model.ipynb
+++ b/examples/Nested Mixture Model.ipynb
@@ -113,45 +113,45 @@
     "data_var = torch.from_numpy(np.var(data, axis=0)).float()\n",
     "\n",
     "# Isotropic covariance.\n",
-    "modelset = beer.NormalSet.create(data_mean, data_var, size=10,\n",
+    "modelset = beer.NormalSet.create(data_mean, data_var, size=12,\n",
     "                                prior_strength=1., noise_std=1., \n",
     "                                cov_type='isotropic')\n",
-    "mixtureset = beer.MixtureSet.create(2, modelset)\n",
+    "mixtureset = beer.MixtureSet.create(4, modelset)\n",
     "m_gmm_iso = beer.Mixture.create(mixtureset)\n",
     "\n",
     "# Diagonal covariance.\n",
-    "modelset = beer.NormalSet.create(data_mean, data_var, size=10,\n",
+    "modelset = beer.NormalSet.create(data_mean, data_var, size=12,\n",
     "                                prior_strength=1., noise_std=1., \n",
     "                                cov_type='diagonal')\n",
-    "mixtureset = beer.MixtureSet.create(2, modelset)\n",
+    "mixtureset = beer.MixtureSet.create(3, modelset)\n",
     "m_gmm_diag = beer.Mixture.create(mixtureset)\n",
     "\n",
     "# Full covariance.\n",
-    "modelset = beer.NormalSet.create(data_mean, data_var, size=10,\n",
+    "modelset = beer.NormalSet.create(data_mean, data_var, size=12,\n",
     "                                prior_strength=1., noise_std=1., \n",
     "                                cov_type='full')\n",
-    "mixtureset = beer.MixtureSet.create(2, modelset)\n",
+    "mixtureset = beer.MixtureSet.create(3, modelset)\n",
     "m_gmm_full = beer.Mixture.create(mixtureset)\n",
     "\n",
     "# Shared isotropic covariance.\n",
-    "modelset = beer.NormalSet.create(data_mean, data_var.diag(), size=10,\n",
+    "modelset = beer.NormalSet.create(data_mean, data_var.diag(), size=12,\n",
     "                                 prior_strength=1., noise_std=1.,\n",
     "                                 cov_type='isotropic', shared_cov=True)\n",
-    "mixtureset = beer.MixtureSet.create(2, modelset)\n",
+    "mixtureset = beer.MixtureSet.create(3, modelset)\n",
     "m_gmm_iso_shared = beer.Mixture.create(mixtureset)\n",
     "\n",
     "# Shared diagonal covariance.\n",
-    "modelset = beer.NormalSet.create(data_mean, data_var.diag(), size=10,\n",
+    "modelset = beer.NormalSet.create(data_mean, data_var.diag(), size=12,\n",
     "                                 prior_strength=1., noise_std=1.,\n",
     "                                 cov_type='diagonal', shared_cov=True)\n",
-    "mixtureset = beer.MixtureSet.create(2, modelset)\n",
+    "mixtureset = beer.MixtureSet.create(3, modelset)\n",
     "m_gmm_diag_shared = beer.Mixture.create(mixtureset)\n",
     "\n",
     "# Shared full covariance.\n",
-    "modelset = beer.NormalSet.create(data_mean, data_var.diag(), size=10,\n",
+    "modelset = beer.NormalSet.create(data_mean, data_var.diag(), size=12,\n",
     "                                 prior_strength=1., noise_std=1.,\n",
     "                                 cov_type='full', shared_cov=True)\n",
-    "mixtureset = beer.MixtureSet.create(2, modelset)\n",
+    "mixtureset = beer.MixtureSet.create(3, modelset)\n",
     "m_gmm_full_shared = beer.Mixture.create(mixtureset)\n",
     "\n",
     "models = {\n",
@@ -162,6 +162,16 @@
     "    'm_gmm_diag_shared': m_gmm_diag_shared,\n",
     "    'm_gmm_full_shared': m_gmm_full_shared,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(m_gmm_iso)\n",
+    "print(m_gmm_iso_shared)"
    ]
   },
   {
@@ -179,12 +189,12 @@
    },
    "outputs": [],
    "source": [
-    "epochs = 100\n",
+    "epochs = 200\n",
     "lrate = 1.\n",
     "X = torch.from_numpy(data).float()\n",
     "\n",
     "optims = {\n",
-    "    model_name: beer.BayesianModelCoordinateAscentOptimizer(model.mean_field_groups, lrate)\n",
+    "    model_name: beer.VariationalBayesOptimizer(model.mean_field_factorization(), lrate)\n",
     "    for model_name, model in models.items()\n",
     "}\n",
     "\n",
@@ -196,9 +206,9 @@
     "for epoch in range(epochs):\n",
     "    for name, model in models.items():\n",
     "        optim = optims[name]\n",
-    "        optim.zero_grad()\n",
+    "        optim.init_step()\n",
     "        elbo = beer.evidence_lower_bound(model, X, datasize=len(X))\n",
-    "        elbo.natural_backward()\n",
+    "        elbo.backward()\n",
     "        elbos[name].append(float(elbo) / len(X))\n",
     "        optim.step()"
    ]
@@ -243,7 +253,7 @@
     "    weights = model.weights.expected_value()\n",
     "    for j, gmm in enumerate(model.modelset):\n",
     "        fig.circle(data[:, 0], data[:, 1], alpha=.1)\n",
-    "        plotting.plot_gmm(fig, gmm, alpha=.5 * weights[j].numpy())\n",
+    "        plotting.plot_gmm(fig, gmm, alpha=weights[j].numpy())\n",
     "    if i % 3 == 0:\n",
     "        figs.append([])\n",
     "    figs[-1].append(fig)\n",
@@ -268,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
