--- a/examples/Mixture Model.ipynb
+++ b/examples/Mixture Model.ipynb
@@ -111,7 +111,9 @@
     "\n",
     "model = model.double()        # set all the parameters in double precision\n",
     "#model = model.cuda()          # move the model on a GPU. If you do so, you'll have\n",
-    "                               # to move the data as well."
+    "                               # to move the data as well.\n",
+    "    \n",
+    "model"
    ]
   },
   {
