Created main AUD recipe.

--- a/examples/Mixture Model.ipynb
+++ b/examples/Mixture Model.ipynb
@@ -113,7 +113,7 @@
     "#model = model.cuda()          # move the model on a GPU. If you do so, you'll have\n",
     "                               # to move the data as well.\n",
     "    \n",
-    "model"
+    "print(model)"
    ]
   },
   {
@@ -131,6 +131,8 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "epochs = 100\n",
     "lrate = 1.\n",
     "\n",
