--- a/examples/HMM.ipynb
+++ b/examples/HMM.ipynb
@@ -192,43 +192,14 @@
     "                                cov_type='full')\n",
     "hmm_full = beer.HMM.create(cgraph, modelset)\n",
     "\n",
-    "# HMM (shared isotropic cov).\n",
-    "modelset = beer.NormalSet.create(data_mean, data_var, size=len(transitions),\n",
-    "                                prior_strength=1., noise_std=0, \n",
-    "                                cov_type='isotropic', shared_cov=True)\n",
-    "hmm_shared_iso = beer.HMM.create(cgraph, modelset)\n",
-    "\n",
-    "# HMM (shared diag cov).\n",
-    "modelset = beer.NormalSet.create(data_mean, data_var, size=len(transitions),\n",
-    "                                prior_strength=1., noise_std=0, \n",
-    "                                cov_type='diagonal', shared_cov=True)\n",
-    "hmm_shared_diag = beer.HMM.create(cgraph, modelset)\n",
-    "\n",
-    "# HMM (shared full cov).\n",
-    "modelset = beer.NormalSet.create(data_mean, data_var, size=len(transitions),\n",
-    "                                prior_strength=1., noise_std=0, \n",
-    "                                cov_type='full', shared_cov=True)\n",
-    "hmm_shared_full = beer.HMM.create(cgraph, modelset)\n",
-    "\n",
     "\n",
     "models = {\n",
     "    'hmm_iso': hmm_iso.double(),\n",
     "    'hmm_diag': hmm_diag.double(), \n",
-    "    'hmm_full': hmm_full.double(),\n",
-    "    'hmm_shared_iso': hmm_shared_iso.double(),\n",
-    "    'hmm_shared_diag': hmm_shared_diag.double(),\n",
-    "    'hmm_shared_full': hmm_shared_full.double()\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(hmm_full) \n",
-    "print(hmm_shared_full)"
+    "    'hmm_full': hmm_full.double()\n",
+    "}\n",
+    "\n",
+    "print(hmm_full) "
    ]
   },
   {
@@ -277,11 +248,7 @@
     "colors = {\n",
     "    'hmm_iso': 'green',\n",
     "    'hmm_diag': 'blue',\n",
-    "    'hmm_full': 'red',\n",
-    "    'hmm_shared_iso': 'grey',\n",
-    "    'hmm_shared_diag': 'brown',\n",
-    "    'hmm_shared_full': 'black'\n",
-    "    \n",
+    "    'hmm_full': 'red',    \n",
     "}\n",
     "# Plot the ELBO.\n",
     "fig = figure(title='ELBO', width=400, height=400, x_axis_label='step',\n",
@@ -356,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
